Bump version to 1.1.2 and enhance server start handling
- Updated version numbers in README, POM, and plugin descriptor.
- Improved server start handling in ServerPreConnectListener to prevent race conditions.
- Enhanced DockerManager command execution with better error handling.
- Updated unit tests to reflect version changes and new logic.

Fixes #1